--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div id="fullpage">
             <div class="section" id="home">
-                <audio hidden loop data-autoplay data-keepplaying>
+                <audio hidden loop data-autoplay>
                     <source src="img/backgroundmusic.mp3" type="audio/mpeg">
                 </audio>
                     <h1>Happy Birthday!</h1>
@@ -49,12 +49,12 @@
             <div class="section" id="reel">
                 <img src="img/wavesOpacity.svg" id="waves">
                 <h1>Reel of the day!!</h1>
-                <p>How to be happy all the time?</p>
+                <p>My jokes are dumb sometimes</p>
                 <img src="img/plunt.png" id="plunt">
                 <img src="img/plunt.png" id="plunt2">
                 <img src="img/pogupogu.png" id="pogu">
                 <img src="img/sopogudamn.png" id="bae">
-                <video height="500" width="250" style="position:absolute;top:200px;left:625px;" controls><source src="img/reelday2.mp4"></video>
+                <video height="500" width="250" style="position:absolute;top:200px;left:625px;" controls><source src="img/reelday3.mp4"></video>
             </div>
 
             <div class="section" id="gift">
@@ -66,7 +66,7 @@
                     <div id="seconds1">NA</div>
                 </div>
                 <div class="trailer">
-                    <video src="img/infinite.mp4" controls="true"></video>
+                    <video src="img/perfect.mp4" controls="true"></video>
                 </div>
 
             </div>
