--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <source src="img/backgroundmusic.mp3" type="audio/mpeg">
                 </audio>
                     <h1>Happy Birthday!</h1>
-                    <P>IT'S BIRTHDAY WEEEEEEEEKKKKK💖 DAY 2
+                    <P>IT'S BIRTHDAY WEEEEEEEEKKKKK💖 DAY 4
                         <br>
                         Everyday till your birthday, you are gonna find a new reel and sometimes <br>
                         even a surprise on this website!
@@ -49,12 +49,12 @@
             <div class="section" id="reel">
                 <img src="img/wavesOpacity.svg" id="waves">
                 <h1>Reel of the day!!</h1>
-                <p>My jokes are dumb sometimes</p>
+                <p>Siya = Happiness</p>
                 <img src="img/plunt.png" id="plunt">
                 <img src="img/plunt.png" id="plunt2">
                 <img src="img/pogupogu.png" id="pogu">
                 <img src="img/sopogudamn.png" id="bae">
-                <video height="500" width="250" style="position:absolute;top:200px;left:625px;" controls><source src="img/reelday3.mp4"></video>
+                <video height="500" width="250" style="position:absolute;top:200px;left:625px;" controls><source src="img/reelday4.mp4"></video>
             </div>
 
             <div class="section" id="gift">
