--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div id="seconds1">NA</div>
                 </div>
                 <div class="trailer">
-                    <video src="img/perfect.mp4" controls="true"></video>
+                    <video src="img/you.mp4" controls="true"></video>
                 </div>
 
             </div>
