--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     <source src="img/backgroundmusic.mp3" type="audio/mpeg">
                 </audio>
                     <h1>Happy Birthday!</h1>
-                    <P>IT'S BIRTHDAY WEEEEEEEEKKKKK💖 DAY 4
+                    <P>IT'S BIRTHDAY WEEEEEEEEKKKKK💖 DAY 5
                         <br>
                         Everyday till your birthday, you are gonna find a new reel and sometimes <br>
-                        even a surprise on this website!
+                        even a surprise on this website! Can't believe only 2 days are left!!!
                          <br>
                     </P>
                     <h2> STAY TUNED! 🎉</h2>
@@ -49,12 +49,12 @@
             <div class="section" id="reel">
                 <img src="img/wavesOpacity.svg" id="waves">
                 <h1>Reel of the day!!</h1>
-                <p>Siya = Happiness</p>
+                <p>Changing opinions like always</p>
                 <img src="img/plunt.png" id="plunt">
                 <img src="img/plunt.png" id="plunt2">
                 <img src="img/pogupogu.png" id="pogu">
                 <img src="img/sopogudamn.png" id="bae">
-                <video height="500" width="250" style="position:absolute;top:200px;left:625px;" controls><source src="img/reelday4.mp4"></video>
+                <video height="500" width="250" style="position:absolute;top:200px;left:625px;" controls><source src="img/reelday5.mp4"></video>
             </div>
 
             <div class="section" id="gift">
@@ -66,12 +66,18 @@
                     <div id="seconds1">NA</div>
                 </div>
                 <div class="trailer">
-                    <video src="img/you.mp4" controls="true"></video>
+                    <video src="img/firstlove.mp4" controls="true"></video>
                 </div>
 
             </div>
 
+            <div class="section" id="comment">
+                <h1>Comment Box!! Here you shall recieve daily updates :))</h1>
+                <iframe src="https://xat.com/embed/chat.php#id=220515421&gn=CommentBox" width="600" height="500" frameborder="0" scrolling="no"></iframe>
+            </div>
+
         </div>
+
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.5/fullpage.min.js" integrity="sha512-IE31EphIcD5gSDjkgexgoxfgPdZWH6LL2LRoEFZem0exi+yUOuSwb3LKnZZfok6Coa9ofkrA4AEZUXzrfLoUXg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         
