--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     <source src="img/backgroundmusic.mp3" type="audio/mpeg">
                 </audio>
                     <h1>Happy Birthday!</h1>
-                    <P>IT'S BIRTHDAY WEEEEEEEEKKKKK💖 DAY 5
+                    <P>IT'S BIRTHDAY WEEEEEEEEKKKKK💖 DAY 6
                         <br>
                         Everyday till your birthday, you are gonna find a new reel and sometimes <br>
-                        even a surprise on this website! Can't believe only 2 days are left!!!
+                        even a surprise on this website! WOOP WOOP!!!
                          <br>
                     </P>
                     <h2> STAY TUNED! 🎉</h2>
@@ -49,12 +49,13 @@
             <div class="section" id="reel">
                 <img src="img/wavesOpacity.svg" id="waves">
                 <h1>Reel of the day!!</h1>
-                <p>Changing opinions like always</p>
+                <p>Two is better than one</p>
                 <img src="img/plunt.png" id="plunt">
                 <img src="img/plunt.png" id="plunt2">
                 <img src="img/pogupogu.png" id="pogu">
                 <img src="img/sopogudamn.png" id="bae">
-                <video height="500" width="250" style="position:absolute;top:200px;left:625px;" controls><source src="img/reelday5.mp4"></video>
+                <video height="500" width="250" style="position:absolute;top:200px;left:500px;" controls><source src="img/reelday6.mp4"></video>
+                <video height="500" width="250" style="position:absolute;top:200px;left:790px;" controls><source src="img/day6reel2.mp4"></video>
             </div>
 
             <div class="section" id="gift">
@@ -66,7 +67,7 @@
                     <div id="seconds1">NA</div>
                 </div>
                 <div class="trailer">
-                    <video src="img/firstlove.mp4" controls="true"></video>
+                    <video src="img/foundher.mp4" controls="true"></video>
                 </div>
 
             </div>
