--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
                     <source src="img/backgroundmusic.mp3" type="audio/mpeg">
                 </audio>
                     <h1>Happy Birthday!</h1>
-                    <P>IT'S BIRTHDAY WEEEEEEEEKKKKK💖 DAY 6
+                    <P>IT'S BIRTHDAY EVEEEEEEEEEEEEEE💖
                         <br>
-                        Everyday till your birthday, you are gonna find a new reel and sometimes <br>
-                        even a surprise on this website! WOOP WOOP!!!
-                         <br>
+                        ITS ALMOST YOUR BDAY!!!!!! WOAHHHHHHHHH SO POGU POGU<br>
                     </P>
                     <h2> STAY TUNED! 🎉</h2>
                     <img src="img/woah.png" id="woah">
-                    <img src="img/cake.png" id="cake">
+                    <a href="https://docs.google.com/document/d/1_eTJTqVLw740kD5R118NmFlyCMdxBcaNnXj_-Q-dEyw/edit?usp=sharing"><img src="img/cake.png" id="cake"></a>
                     <div class="countdown">
                         <div id="days">NA</div>
                         <div id="hours">NA</div>
@@ -49,13 +47,13 @@
             <div class="section" id="reel">
                 <img src="img/wavesOpacity.svg" id="waves">
                 <h1>Reel of the day!!</h1>
-                <p>Two is better than one</p>
+                <p>Wanted to make this since so long</p>
                 <img src="img/plunt.png" id="plunt">
                 <img src="img/plunt.png" id="plunt2">
                 <img src="img/pogupogu.png" id="pogu">
                 <img src="img/sopogudamn.png" id="bae">
-                <video height="500" width="250" style="position:absolute;top:200px;left:500px;" controls><source src="img/reelday6.mp4"></video>
-                <video height="500" width="250" style="position:absolute;top:200px;left:790px;" controls><source src="img/day6reel2.mp4"></video>
+                <video height="500" width="250" style="position:absolute;top:200px;left:500px;" controls><source src="img/eveday.mp4"></video>
+                <video height="500" width="250" style="position:absolute;top:200px;left:790px;" controls><source src="img/graves.mp4"></video>
             </div>
 
             <div class="section" id="gift">
@@ -67,7 +65,7 @@
                     <div id="seconds1">NA</div>
                 </div>
                 <div class="trailer">
-                    <video src="img/foundher.mp4" controls="true"></video>
+                    <video src="img/toofine.mp4" controls="true"></video>
                 </div>
 
             </div>
