--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
         <span id="minutes">00</span><a>Minutes</a>
         <span id="seconds">00</span><a>Seconds</a>
     </div>
-    <a href="#" target="#">
+    <a href="https://docs.google.com/document/d/15RYX3rQCww-DJbZ2lF7jYNS2gGpdy2iajmUlyg0vQ7s/edit?usp=sharing" target="Day 1">
         <img src="images/pen.png" alt="Woah" id="clickableImage">
     </a>
-    <a href="#" target="#">
+    <a href="https://open.spotify.com/playlist/2m0zIuiuHMiuT171AqwI0r?si=ffd0edeb73494356&pt=4e879a4ac6a2b37dc6b09e16ca26d930" target="day 1">
         <img src="images/box.png" alt="Woah" id="clickableImage2">
     </a>
     </div>
