--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <p class="box-text">Loverest</p>
+            <a class="box-text" href="https://siyabday.b-cdn.net/Day1.mp4">Loverest</a>
         </div>
         <div class="box box-2">
             <video class="video" preload="auto" loop>
@@ -123,10 +123,10 @@
         <span id="minutes">00</span><a>Minutes</a>
         <span id="seconds">00</span><a>Seconds</a>
     </div>
-    <a href="https://docs.google.com/document/d/15RYX3rQCww-DJbZ2lF7jYNS2gGpdy2iajmUlyg0vQ7s/edit?usp=sharing" target="Day 1">
+    <a href="https://docs.google.com/document/d/1vgN52ZEFWTzZt7zp3kCpyo4JcgXFUgEE7dbwOoBawfM/edit?usp=sharing" target="Day 2">
         <img src="images/pen.png" alt="Woah" id="clickableImage">
     </a>
-    <a href="https://open.spotify.com/playlist/2m0zIuiuHMiuT171AqwI0r?si=ffd0edeb73494356&pt=4e879a4ac6a2b37dc6b09e16ca26d930" target="day 1">
+    <a href="https://docs.google.com/document/d/1jr5NtUagAWWbVlE7eRNBg3X-o9lkc8kN1451AyznwNk/edit?usp=sharing" target="day 2">
         <img src="images/box.png" alt="Woah" id="clickableImage2">
     </a>
     </div>
