--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <p class="box-text">Goofiest</p>
+            <a class="box-text" href="https://siyabday.b-cdn.net/Day2.mp4">Goofiest</p>
         </div>
         <div class="box box-3">
             <video class="video" preload="auto" loop>
@@ -123,10 +123,10 @@
         <span id="minutes">00</span><a>Minutes</a>
         <span id="seconds">00</span><a>Seconds</a>
     </div>
-    <a href="https://docs.google.com/document/d/1vgN52ZEFWTzZt7zp3kCpyo4JcgXFUgEE7dbwOoBawfM/edit?usp=sharing" target="Day 2">
+    <a href="https://docs.google.com/document/d/1eh0Yq3u5KTTZHWlGJwBsMxbbIFvTVcpk50H603qpgvA/edit?usp=sharing" target="Day 3">
         <img src="images/pen.png" alt="Woah" id="clickableImage">
     </a>
-    <a href="https://docs.google.com/document/d/1jr5NtUagAWWbVlE7eRNBg3X-o9lkc8kN1451AyznwNk/edit?usp=sharing" target="day 2">
+    <a href="https://siyabday.b-cdn.net/ZendayaWish.mp4" target="day 3">
         <img src="images/box.png" alt="Woah" id="clickableImage2">
     </a>
     </div>
