--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <a class="box-text" href="https://siyabday.b-cdn.net/Day2.mp4">Goofiest</p>
+            <a class="box-text" href="https://siyabday.b-cdn.net/Day2.mp4">Goofiest</a>
         </div>
         <div class="box box-3">
             <video class="video" preload="auto" loop>
