--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <a class="box-text" href="https://siyabday.b-cdn.net/Day2.mp4">Goofiest</a>
+            <a class="box-text" href="https://siyabday.b-cdn.net/Day2.mp4">Goofiest</p>
         </div>
         <div class="box box-3">
             <video class="video" preload="auto" loop>
@@ -51,7 +51,7 @@
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <p class="box-text">Prettiest</p>
+            <a class="box-text" href="https://siyabday.b-cdn.net/Day3-1.mp4">Prettiest</a>
         </div>
         <div class="box box-4">
             <video class="video" preload="auto" loop>
@@ -123,7 +123,7 @@
         <span id="minutes">00</span><a>Minutes</a>
         <span id="seconds">00</span><a>Seconds</a>
     </div>
-    <a href="https://docs.google.com/document/d/1eh0Yq3u5KTTZHWlGJwBsMxbbIFvTVcpk50H603qpgvA/edit?usp=sharing" target="Day 3">
+    <a href="https://docs.google.com/document/d/1zWwR678RnUFn8AYRrKAkcT-Vtiwvh7CCWEjFNYexRsk/edit?usp=sharing" target="Day 3">
         <img src="images/pen.png" alt="Woah" id="clickableImage">
     </a>
     <a href="https://siyabday.b-cdn.net/ZendayaWish.mp4" target="day 3">
