--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="box box-1">
             <video class="video" preload="auto" loop>
                 <source
-                    src="https://cdn.discordapp.com/attachments/929353076140290094/1094734448488095756/recorded-180500710693.MP4"
+                    src="https://cdn.discordapp.com/attachments/929353076140290094/1097955382405640335/12.mp4"
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
@@ -38,7 +38,7 @@
         <div class="box box-2">
             <video class="video" preload="auto" loop>
                 <source
-                    src="https://cdn.discordapp.com/attachments/929353076140290094/1094736298058723338/5.mp4"
+                    src="https://cdn.discordapp.com/attachments/929353076140290094/1097955382959296573/11.mp4"
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
@@ -60,7 +60,7 @@
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <p class="box-text">Cutest</p>
+            <a class="box-text" href="https://siyabday.b-cdn.net/Day4.mp4">Prettiest</a>
         </div>
         <div class="box box-5">
             <video class="video" preload="auto" loop>
@@ -123,10 +123,10 @@
         <span id="minutes">00</span><a>Minutes</a>
         <span id="seconds">00</span><a>Seconds</a>
     </div>
-    <a href="https://docs.google.com/document/d/1zWwR678RnUFn8AYRrKAkcT-Vtiwvh7CCWEjFNYexRsk/edit?usp=sharing" target="Day 3">
+    <a href="https://docs.google.com/document/d/10pZ3HGsOMK5dn1eyTefDGPa44MLrYAfRHLYnhT9km1Q/edit?usp=sharing" target="Day 5">
         <img src="images/pen.png" alt="Woah" id="clickableImage">
     </a>
-    <a href="https://siyabday.b-cdn.net/ZendayaWish.mp4" target="day 3">
+    <a href="https://docs.google.com/document/d/1LqWm5hxfQ3-qPMBkyvKbz291CqSwC3v8Tx4jXulVGMs/edit?usp=sharing" target="Day 5">
         <img src="images/box.png" alt="Woah" id="clickableImage2">
     </a>
     </div>
