--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <p class="box-text">Sexiest</p>
+            <a class="box-text" href="https://siyabday.b-cdn.net/Day5.mp4">Sexiest</a>
         </div>
         <div class="box box-6">
             <video class="video" preload="auto" loop>
@@ -123,10 +123,10 @@
         <span id="minutes">00</span><a>Minutes</a>
         <span id="seconds">00</span><a>Seconds</a>
     </div>
-    <a href="https://docs.google.com/document/d/10pZ3HGsOMK5dn1eyTefDGPa44MLrYAfRHLYnhT9km1Q/edit?usp=sharing" target="Day 5">
+    <a href="https://docs.google.com/document/d/1NLnWzBOY_VMDny_VQRaIyUNOVNjDWMqnUSo5fDWOWEQ/edit?usp=sharing" target="Day 6">
         <img src="images/pen.png" alt="Woah" id="clickableImage">
     </a>
-    <a href="https://docs.google.com/document/d/1LqWm5hxfQ3-qPMBkyvKbz291CqSwC3v8Tx4jXulVGMs/edit?usp=sharing" target="Day 5">
+    <a href="https://docs.google.com/document/d/1idy-an6PB1C8nDVnCQOW6FrdOgXyk7kSsi-ZkQ2EoP8/edit?usp=sharing" target="Day 6">
         <img src="images/box.png" alt="Woah" id="clickableImage2">
     </a>
     </div>
