--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <p class="box-text">Muahest</p>
+            <a class="box-text" href="https://siyabday.b-cdn.net/Day6.mp4">Muahest</a>
         </div>
         <div class="box box-7">
             <video class="video" preload="auto" loop>
@@ -123,10 +123,10 @@
         <span id="minutes">00</span><a>Minutes</a>
         <span id="seconds">00</span><a>Seconds</a>
     </div>
-    <a href="https://docs.google.com/document/d/1NLnWzBOY_VMDny_VQRaIyUNOVNjDWMqnUSo5fDWOWEQ/edit?usp=sharing" target="Day 6">
+    <a href="https://docs.google.com/document/d/1XsC_rJLqmJdYAO21hnFf8f9a6A92pvpPc8ON83VTYrc/edit?usp=sharing" target="Day 7">
         <img src="images/pen.png" alt="Woah" id="clickableImage">
     </a>
-    <a href="https://docs.google.com/document/d/1idy-an6PB1C8nDVnCQOW6FrdOgXyk7kSsi-ZkQ2EoP8/edit?usp=sharing" target="Day 6">
+    <a href="https://docs.google.com/document/d/196ptpnlNX5eAkFlAl4oe2GLAICR3bzXghN3ZHNvE7Lc/edit?usp=sharing" target="Day 7">
         <img src="images/box.png" alt="Woah" id="clickableImage2">
     </a>
     </div>
