--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <p class="box-text">Coolest</p>
+            <a class="box-text" href="https://siyabday.b-cdn.net/Day7.mp4">Coolest</a>
         </div>
         <div class="box box-8">
             <video class="video" preload="auto" loop>
@@ -123,10 +123,10 @@
         <span id="minutes">00</span><a>Minutes</a>
         <span id="seconds">00</span><a>Seconds</a>
     </div>
-    <a href="https://docs.google.com/document/d/1XsC_rJLqmJdYAO21hnFf8f9a6A92pvpPc8ON83VTYrc/edit?usp=sharing" target="Day 7">
+    <a href="https://docs.google.com/document/d/1G0RGD1rpIWFNHQQ8ajnIXwkXWkCzNsfp073hInxI2z8/edit?usp=sharing" target="Day 8">
         <img src="images/pen.png" alt="Woah" id="clickableImage">
     </a>
-    <a href="https://docs.google.com/document/d/196ptpnlNX5eAkFlAl4oe2GLAICR3bzXghN3ZHNvE7Lc/edit?usp=sharing" target="Day 7">
+    <a href="https://docs.google.com/document/d/1L7LMwjU7OJnY8WcBlznZ5q6OpXsEIHJwgADicrL4LSU/edit?usp=sharing" target="Day 8">
         <img src="images/box.png" alt="Woah" id="clickableImage2">
     </a>
     </div>
