--- a/wishes.html
+++ b/wishes.html
@@ -29,92 +29,92 @@
         <div class="box box-1">
             <video class="video" preload="auto" loop>
                 <source
-                    src="https://cdn.discordapp.com/attachments/929353076140290094/1097955382405640335/12.mp4"
+                    src="https://cdn.discordapp.com/attachments/929353076140290094/1099772422258958470/WIN_20230424_00_31_29_Pro.mp4"
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <a class="box-text" href="https://siyabday.b-cdn.net/Day1.mp4">Loverest</a>
+            <a class="box-text" href="">Happy Birthday!</a>
         </div>
         <div class="box box-2">
             <video class="video" preload="auto" loop>
                 <source
-                    src="https://cdn.discordapp.com/attachments/929353076140290094/1097955382959296573/11.mp4"
+                    src="https://cdn.discordapp.com/attachments/666568707325296660/1099753147532058715/WIN_20230423_22_57_05_Pro.mp4"
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <a class="box-text" href="https://siyabday.b-cdn.net/Day2.mp4">Goofiest</a>
+            <a class="box-text" href="">Happy Birthday!</a>
         </div>
         <div class="box box-3">
             <video class="video" preload="auto" loop>
                 <source
-                    src="https://cdn.discordapp.com/attachments/929353076140290094/1094736297232445440/2.mp4"
+                    src="https://cdn.discordapp.com/attachments/929353076140290094/1099771406562099272/Avanya.mp4"
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <a class="box-text" href="https://siyabday.b-cdn.net/Day3-1.mp4">Prettiest</a>
+            <a class="box-text" href="">Happy Birthday!</a>
         </div>
         <div class="box box-4">
             <video class="video" preload="auto" loop>
                 <source
-                    src="https://cdn.discordapp.com/attachments/929353076140290094/1094736298281013269/6.mp4"
+                    src="https://cdn.discordapp.com/attachments/929353076140290094/1099771410529918977/Ananya.mp4"
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <a class="box-text" href="https://siyabday.b-cdn.net/Day4.mp4">Prettiest</a>
+            <a class="box-text" href="">Happy Birthday!</a>
         </div>
         <div class="box box-5">
             <video class="video" preload="auto" loop>
                 <source
-                    src="https://cdn.discordapp.com/attachments/929353076140290094/1094736298616573982/7.mp4"
+                    src="https://cdn.discordapp.com/attachments/929353076140290094/1099771476883816508/Pranav.mp4"
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <a class="box-text" href="https://siyabday.b-cdn.net/Day5.mp4">Sexiest</a>
+            <a class="box-text" href="">Happy Birthday!</a>
         </div>
         <div class="box box-6">
             <video class="video" preload="auto" loop>
                 <source
-                    src="https://cdn.discordapp.com/attachments/929353076140290094/1094736299048570930/8.mp4"
+                    src="https://cdn.discordapp.com/attachments/929353076140290094/1099771498069233684/Pranay.mp4"
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <a class="box-text" href="https://siyabday.b-cdn.net/Day6.mp4">Muahest</a>
+            <a class="box-text" href="">Happy Birthday!</a>
         </div>
         <div class="box box-7">
             <video class="video" preload="auto" loop>
                 <source
-                    src="https://cdn.discordapp.com/attachments/929353076140290094/1094736297567981578/3.mp4"
+                    src="https://cdn.discordapp.com/attachments/929353076140290094/1099771520965951508/Simrat.mp4"
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <a class="box-text" href="https://siyabday.b-cdn.net/Day7.mp4">Coolest</a>
+            <a class="box-text" href="">Happy Birthday!</a>
         </div>
         <div class="box box-8">
             <video class="video" preload="auto" loop>
                 <source
-                    src="https://cdn.discordapp.com/attachments/929353076140290094/1094736296922075236/1.mp4"
+                    src="https://siyabday.b-cdn.net/ZendayaWish.mp4"
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <p class="box-text">Bestest</p>
+            <p class="box-text">Happy Birthday!</p>
         </div>
         <div class="box box-9">
             <video class="video" preload="auto" loop>
                 <source
-                    src="https://cdn.discordapp.com/attachments/929353076140290094/1094736296666206339/9.mp4"
+                    src="https://cdn.discordapp.com/attachments/929353076140290094/1099771868178821193/2023-04-23_21-33-13.mp4"
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <p class="box-text">Pyaaruest</p>
+            <p class="box-text">Happy Birthday!</p>
         </div>
         <div class="box box-10">
             <video class="video" preload="auto" loop>
                 <source
-                    src="https://cdn.discordapp.com/attachments/929353076140290094/1094736297807073310/4.mp4"
+                    src="https://siyabday.b-cdn.net/lebronwish.mp4"
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <p class="box-text">Hottest</p>
+            <p class="box-text">Happy Birthday!</p>
         </div>
     </div>
     <div id="countdown">
@@ -123,10 +123,10 @@
         <span id="minutes">00</span><a>Minutes</a>
         <span id="seconds">00</span><a>Seconds</a>
     </div>
-    <a href="https://docs.google.com/document/d/13N7g02JpIv7PEBcAOSs4J-bZG3ehtZOUtHFhhQC5dwI/edit?usp=sharing" target="Day 10">
+    <a href="https://docs.google.com/document/d/1G0RGD1rpIWFNHQQ8ajnIXwkXWkCzNsfp073hInxI2z8/edit?usp=sharing" target="Day 8">
         <img src="images/pen.png" alt="Woah" id="clickableImage">
     </a>
-    <a href="https://farkletae.github.io/soyatax/wishes.html" target="Day 10">
+    <a href="https://docs.google.com/document/d/1L7LMwjU7OJnY8WcBlznZ5q6OpXsEIHJwgADicrL4LSU/edit?usp=sharing" target="Day 8">
         <img src="images/box.png" alt="Woah" id="clickableImage2">
     </a>
     </div>
