--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <p class="box-text">Bestest</p>
+            <a class="box-text" href="https://siyabday.b-cdn.net/Day8.mp4">Bestest</a>
         </div>
         <div class="box box-9">
             <video class="video" preload="auto" loop>
@@ -105,7 +105,7 @@
                     type="video/mp4">
             </video>
             <div class="overlay"></div>
-            <p class="box-text">Pyaaruest</p>
+            <a class="box-text" href="https://siyabday.b-cdn.net/Day9.mp4">Pyaaruest</a>
         </div>
         <div class="box box-10">
             <video class="video" preload="auto" loop>
